# sophon-tools

./: .gitignore  API.md  BUILD.md  README.md  USAGE.md  release.sh
docs/superpowers/plans/: 2026-06-22-sophon-tools-psophliteos-split.md
source/pSophUI/: readme.md
source/pSophUI/SophUI/: main.cpp  mainwindow.cpp  mainwindow.h  (+2 more)
source/pautotelecomm/: .gitignore  README.md  release.sh
source/pbm_set_ip/: .gitignore  cmd_note.md  readme.md
source/pbm_set_ip/bm_set_ip/: .git_version  Cargo.toml  bm_set_ip_auto  build.rs  build.sh
source/pbm_set_ip/bm_set_ip/src/: main.rs
source/pbm_set_ip/bm_set_ip/tests/: parse_cases.rs  parse_cases.sh
source/pbmsec/: release.sh
source/pbmssm/: .gitignore  README.md  go.mod  go.sum  main.go  main_test.go
source/pdfss_cpp/: linux_release.sh  readme.md
source/pget_info/: get_info.sh  get_info_log_to_png.py  get_info_log_to_png.yaml  readme.md  release.sh
source/pget_info_exporter/: .gitignore  Cargo.toml  Dockerfile  config.yaml
source/pget_info_exporter/grafana/: SE7_SE9 Grafana by prometheus-1771902730249.json
source/pget_info_exporter/src/: chip.rs  config.rs  exporter.rs  hardware.rs  lib.rs  main.rs  metrics.rs
source/pmem_aging_test/: release.sh
source/pmemory_edit/: readme.md  release.sh
source/pmemtest/: readme.md  release.sh
source/pmulti_video_qt/: .gitignore
source/pota_update/: get_network_info.sh  ota.sh  ota_update.sh  readme.md  release.sh
source/pqt_batch_deployment/: CMakeLists.txt
source/pqt_memory_edit/: CMakeLists.txt
source/psocbak/: readme.md
source/psophliteos/: .env  .env.development  .gitignore  README.md  release_version.txt
source/pssm/: .gitignore  README.md  go.mod  go.sum  main.go  main_test.go
(+491 files in other folders)
